--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ REDIS_DB=0
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=lustiuk.n_ak22@nuwm.edu.ua
-EMAIL_HOST_PASSWORD=hjqmmrxxuezjmjhr
+EMAIL_HOST_USER="your email"
+EMAIL_HOST_PASSWORD="your pass"
 
 # Google Calendar API (для інтеграції календаря)
 GOOGLE_CLIENT_ID=your-google-client-id
